spec/error_lambda_param_type.expected
spec/error_lambda_param_type.kex:6:22: error: Cannot add Integer and String
Aborted: fix type errors before running (use --no-check to skip).
